--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,9 +1,9 @@
 <h2>New book</h2>
 <%= form_with model: @book do |f| %>
-  <label>Title</label>
+  <h3>Title</h3>
   <%= f.text_field :title %>
 
-  <label>Body</label>
+  <h3>Body</h3>
   <%= f.text_area :body %>
 
   <%= f.submit 'Create Book' %>
