--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,9 +1,24 @@
-<h2>New book</h2>
+<h1>Books</h1>
+<table>
+  <thead>
+    <tr>
+      <th>Title</th>
+      <th>Body</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+<%= @books.each do |bk| %>
+<p>Title</p>
+<span><%= bk.title %></span>
+<p>Body</p>
+<span><%= bk.body %></span>
+<% end %>
+<h3>New book</h3>
 <%= form_with model: @book do |f| %>
-  <h3>Title</h3>
+  <h4>Title</h4>
   <%= f.text_field :title %>
 
-  <h3>Body</h3>
+  <h4>Body</h4>
   <%= f.text_area :body %>
 
   <%= f.submit 'Create Book' %>
