--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,4 +1,5 @@
 <h1>Books</h1>
+<%= @books.each do |bk| %>
 <table>
   <thead>
     <tr>
@@ -6,12 +7,13 @@
       <th>Body</th>
       <th colspan="3"></th>
     </tr>
+    <tr>
+      <tb><span><%= bk.title %></span></tb>
+      <tb><span><%= bk.body %></span></tb>
+      <tb><a 
+
+
   </thead>
-<%= @books.each do |bk| %>
-<p>Title</p>
-<span><%= bk.title %></span>
-<p>Body</p>
-<span><%= bk.body %></span>
 <% end %>
 <h3>New book</h3>
 <%= form_with model: @book do |f| %>
