--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -7,13 +7,16 @@
       <th>Body</th>
       <th colspan="3"></th>
     </tr>
+    </thead>
     <tr>
       <tb><span><%= bk.title %></span></tb>
       <tb><span><%= bk.body %></span></tb>
-      <tb><a 
+      <tb><span><%= link_to "Show", "/books/#{bk.id}" %></span></tb>
+      <tb><span><%= link_to "Edit", "/books/#{bk.id}/edit"></span></tb>
+      <tb><span><%= link_to "Destroy", destroy_abook_path(@books.id), method: :delete, "data-confirm" => "Are you sure?" %></span><tb>
+    </tr>
+</table>
 
-
-  </thead>
 <% end %>
 <h3>New book</h3>
 <%= form_with model: @book do |f| %>
