Bookersを作成しよう続き

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,5 +1,9 @@
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+</head>
+<body>
 <h1>Books</h1>
-<%= @books.each do |bk| %>
 <table>
   <thead>
     <tr>
@@ -7,17 +11,20 @@
       <th>Body</th>
       <th colspan="3"></th>
     </tr>
-    </thead>
+  </thead>
+  <tbody>
+  <% @books.each do |bk| %>
     <tr>
       <tb><span><%= bk.title %></span></tb>
       <tb><span><%= bk.body %></span></tb>
       <tb><span><%= link_to "Show", "/books/#{bk.id}" %></span></tb>
-      <tb><span><%= link_to "Edit", "/books/#{bk.id}/edit"></span></tb>
-      <tb><span><%= link_to "Destroy", destroy_abook_path(@books.id), method: :delete, "data-confirm" => "Are you sure?" %></span><tb>
+      <tb><span><%= link_to "Edit", "/books/#{bk.id}/edit" %></span></tb>
+      <tb><span><%= link_to "Destroy", destroy_abook_path(bk.id), method: :delete, "data-confirm" => "Are you sure?" %></span><tb>
     </tr>
+    <% end %>
+  </tbody>
 </table>
-
-<% end %>
+</body>
 <h3>New book</h3>
 <%= form_with model: @book do |f| %>
   <h4>Title</h4>
