--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -2,3 +2,6 @@
 <p><%= @book.title %></p>
 <h3>Body:</h3>
 <p><%= @book.body %></p>
+<%= link_to "Edit", edit_book_path(@book.id) %>
+|
+<%= link_to "Back", '/books' %>
