--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,2 +1,16 @@
-<h1>Books#edit</h1>
-<p>Find me in app/views/books/edit.html.erb</p>
+<!DOCTYPE html>
+<html>
+
+<h1>Editing Book</h1>
+
+<%= form_with model: @book, url: update_book_path(@book.id), method: :patch do |bk| %>
+
+<label>Title</label>
+<%= bk.text_field :title %>
+
+<label>Body</label>
+<%= bk.text_area :body %>
+
+<%= bk.submit 'Update Book' %>
+
+<% end %>
