Bookersを作成しよう続き

--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -13,4 +13,9 @@
 
 <%= bk.submit 'Update Book' %>
 
+
+<%= link_to "Show", "/books/#{@book.id}" %>
+|
+<%= link_to "Back", "/books" %>
+
 <% end %>
