--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -19,17 +19,30 @@
   <tbody>
   <% @books.each do |bk| %>
     <tr>
-      <tb><span><%= bk.title %></span></tb>
-      <tb><span><%= bk.body %></span></tb>
-      <tb><span><%= link_to "Show", "/books/#{bk.id}" %></span></tb>
-      <tb><span><%= link_to "Edit", "/books/#{bk.id}/edit" %></span></tb>
-      <tb><span><%= link_to "Destroy", destroy_abook_path(bk.id), method: :delete, "data-confirm" => "Are you sure?" %></span><tb>
+      <td><span><%= bk.title %></span></td>
+      <td><span><%= bk.body %></span></td>
+      <td><span><%= link_to "Show", "/books/#{bk.id}" %></span></td>
+      <td><span><%= link_to "Edit", "/books/#{bk.id}/edit" %></span></td>
+      <td><span><%= link_to "Destroy", destroy_abook_path(bk.id), method: :delete, "data-confirm" => "Are you sure?" %></span></td>
     </tr>
     <% end %>
   </tbody>
 </table>
 
 <h3>New book</h3>
+<% if @book.errors.any? %>
+  <% if @book.errors.count > 1 %>
+  <%= @book.errors.count %>errors prohibited this book from being saved:
+  <% else %>
+  <%= @book.errors.count %>error prohibited this book from being saved:
+  <% end %>
+  <ul>
+    <% @book.errors.full_messages.each do |error| %>
+      <li><%= error %></li>
+    <% end %>
+  </ul>
+<% end %>
+
 <%= form_with model: @book do |f| %>
   <h4>Title</h4>
   <%= f.text_field :title %>
