--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,12 @@
   </head>
 
   <body>
+
+  <main>
+    <% flash.each do |msg_type, msg| %>
+      <div class="flash-message <%= msg_type %>"><%= msg %></div>
+    <% end %>
     <%= yield %>
+  </main>
   </body>
 </html>
