--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -3,6 +3,18 @@
 
 <h1>Editing Book</h1>
 
+<% if @book.errors.any? %>
+  <% if @book.errors.count > 1 %>
+    <%= @book.errors.count %> errors prohibited this book from being saved:
+  <% else %>
+    <%= @book.errors.count %> error prohibited this book from being saved:
+    <ul>
+    <%= @book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+    </ul>
+<% end %>
+
 <%= form_with model: @book, url: update_book_path(@book.id), method: :patch do |bk| %>
 
 <label>Title</label>
