--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
 
+<head>
+</head>
+
+<body>
+
 <h1>Editing Book</h1>
 
 <% if @book.errors.any? %>
@@ -9,10 +14,11 @@
   <% else %>
     <%= @book.errors.count %> error prohibited this book from being saved:
     <ul>
-    <%= @book.errors.full_messages.each do |message| %>
+    <% @book.errors.full_messages.each do |message| %>
       <li><%= message %></li>
     <% end %>
     </ul>
+<% end %>
 <% end %>
 
 <%= form_with model: @book, url: update_book_path(@book.id), method: :patch do |bk| %>
@@ -25,9 +31,11 @@
 
 <%= bk.submit 'Update Book' %>
 
+<% end %>
 
 <%= link_to "Show", "/books/#{@book.id}" %>
 |
 <%= link_to "Back", "/books" %>
 
-<% end %>
+</body>
+</html>
